# Anti-BossShield

./: .gitignore  BossSentinel.spec  README.md  config.json.example  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
boss_sentinel/: __init__.py  __main__.py  config.py  detector.py  gui.py  locker.py  logger.py  main.py  monitor.py  notifier.py  recognizer.py  tracker.py
hooks/: runtime_hook_torch.py
tests/: test_config.py  test_detector.py  test_performance.py  test_tracker.py
